--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   contained_tab_bar_view: ^0.8.0
+  conditional_builder: ^1.0.2
+  flutter_bloc: ^7.0.1
+  bloc: ^7.0.0
+  dio: ^4.0.0
+  firebase_core: ^1.4.0
+  cloud_firestore: ^2.4.0
+  image_picker: ^0.8.2
+  firebase_auth: ^3.1.0
 
 dev_dependencies:
   flutter_test:
